# Zvec.Net

./: .gitignore  README.md  Zvec.Net.sln  build-native.sh
.github/workflows/: ci.yml  release.yml
examples/Zvec.Net.Examples/: Program.cs  Zvec.Net.Examples.csproj
src/Zvec.Net/: Collection.cs  Collection{T}.cs  IVectorCollection.cs  VectorQueryBuilder{T}.cs  Zvec.Net.csproj  ZvecException.cs
src/Zvec.Net.Native/: CMakeLists.txt  zvec_c.cc  zvec_c.h
src/Zvec.Net/Attributes/: FieldAttribute.cs  KeyAttribute.cs  VectorFieldAttribute.cs
src/Zvec.Net/Exceptions/: SchemaValidationException.cs  UnsupportedExpressionException.cs
src/Zvec.Net/Index/: CollectionOptions.cs  IndexParams.cs  IndexQueryParam.cs
src/Zvec.Net/Internal/: ThrowHelper.cs  TypeValidator.cs
src/Zvec.Net/Models/: Doc.cs  DocumentBase.cs  SparseVector.cs  Status.cs
src/Zvec.Net/Native/: INativeMethods.cs  NativeMethods.cs  NativeMethodsWrapper.cs  NativeSchemaHelper.cs  NativeStatusExtensions.cs  NativeTypes.cs
src/Zvec.Net/Query/: FilterExpressionTranslator.cs  IVectorQueryBuilder.cs  QueryOptions.cs  ReRanker.cs  VectorQuery.cs
src/Zvec.Net/Schema/: CollectionSchema.cs  CollectionStats.cs  FieldSchema.cs  SchemaGenerator.cs  VectorSchema.cs
src/Zvec.Net/Types/: DataType.cs  IndexType.cs  MetricType.cs  QuantizeType.cs  StatusCode.cs  VectorPrecision.cs
tests/Zvec.Net.Tests/: Documents.cs  Zvec.Net.Tests.csproj
tests/Zvec.Net.Tests/Collection/: CollectionTests.cs  CollectionTypedTests.cs
tests/Zvec.Net.Tests/Exceptions/: ExceptionTests.cs
tests/Zvec.Net.Tests/Index/: CollectionOptionsTests.cs  IndexParamsTests.cs
tests/Zvec.Net.Tests/Internal/: ThrowHelperTests.cs
tests/Zvec.Net.Tests/Mocks/: MockNativeMethods.cs
tests/Zvec.Net.Tests/Models/: DocTests.cs  DocumentBaseTests.cs  SparseVectorTests.cs  StatusTests.cs
tests/Zvec.Net.Tests/Native/: IntegrationTests.cs  NativeLibraryTests.cs
tests/Zvec.Net.Tests/Query/: FilterExpressionTranslatorTests.cs  QueryOptionsTests.cs  ReRankerTests.cs  VectorQueryTests.cs
tests/Zvec.Net.Tests/Schema/: SchemaGeneratorTests.cs  SchemaTests.cs  TypeValidationTests.cs
tests/Zvec.Net.Tests/Types/: TypesTests.cs
